recursion.cons.nfirst.Nfirst.scala.error
Erreur de compilation :
Nfirst:8: error: type mismatch;
 found   : Int
 required: List[Int]
    return l.head;
             ^