recursion.cons.nfirst.Nfirst.scala.code
def nfirst(l:List[Int], n:Int): List[Int] = {
  if(l==Nil){
    return Nil;
  }
  
  if(n==1){
    return l.head;
  }
  
  return l.head::nfirst(l.tail,n-1);
}